fix(rustdesk): Moved to stable  (#28920)
**Description**
<!--
Please include a summary of the change and which issue is fixed. Please
also include relevant motivation and context. List any dependencies that
are required for this change.
-->
⚒️ Fixes  # <!--(issue)-->

**⚙️ Type of change**

- [ ] ⚙️ Feature/App addition
- [x] 🪛 Bugfix
- [ ] ⚠️ Breaking change (fix or feature that would cause existing
functionality to not work as expected)
- [ ] 🔃 Refactor of current code

**🧪 How Has This Been Tested?**
<!--
Please describe the tests that you ran to verify your changes. Provide
instructions so we can reproduce. Please also list any relevant details
for your test configuration
-->

**📃 Notes:**
<!-- Please enter any other relevant information here -->

**✔️ Checklist:**

- [x] ⚖️ My code follows the style guidelines of this project
- [ ] 👀 I have performed a self-review of my own code
- [ ] #️⃣ I have commented my code, particularly in hard-to-understand
areas
- [ ] 📄 I have made corresponding changes to the documentation
- [ ] ⚠️ My changes generate no new warnings
- [ ] 🧪 I have added tests to this description that prove my fix is
effective or that my feature works
- [x] ⬆️ I increased versions for any altered app according to semantic
versioning
- [x] I made sure the title starts with `feat(chart-name):`,
`fix(chart-name):` or `chore(chart-name):`

**➕ App addition**

If this PR is an app addition please make sure you have done the
following.

- [ ] 🖼️ I have added an icon in the Chart's root directory called
`icon.png`

---

_Please don't blindly check all the boxes. Read them and only check
those that apply.
Those checkboxes are there for the reviewer to see what is this all
about and
the status of this PR with a quick glance._

---------

Signed-off-by: alfi0812 <43101280+alfi0812@users.noreply.github.com>

--- a/charts/stable/rustdesk/Chart.yaml
+++ b/charts/stable/rustdesk/Chart.yaml
@@ -2,7 +2,7 @@ annotations:
   truecharts.org/category: security
   truecharts.org/max_helm_version: "3.15"
   truecharts.org/min_helm_version: "3.11"
-  truecharts.org/train: incubator
+  truecharts.org/train: stable
 apiVersion: v2
 appVersion: 1.1.12
 dependencies:
@@ -15,7 +15,7 @@ dependencies:
     import-values: []
 deprecated: false
 description: rustdesk self-hosted
-home: https://truecharts.org/charts/incubator/rustdesk
+home: https://truecharts.org/charts/stable/rustdesk
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/rustdesk.webp
 keywords:
   - rustdesk
@@ -27,8 +27,8 @@ maintainers:
 name: rustdesk
 sources:
   - https://github.com/rustdesk/rustdesk-server
-  - https://github.com/truecharts/charts/tree/master/charts/incubator/rustdesk
+  - https://github.com/truecharts/charts/tree/master/charts/stable/rustdesk
   - https://hub.docker.com/r/rustdesk/rustdesk-server-s6
   - https://rustdesk.com/de/
 type: application
-version: 0.0.1
+version: 1.0.0
