--- a/charts/stable/wallos/Chart.yaml
+++ b/charts/stable/wallos/Chart.yaml
@@ -6,7 +6,7 @@ annotations:
   truecharts.org/min_helm_version: "3.11"
   truecharts.org/train: stable
 apiVersion: v2
-appVersion: latest
+appVersion: 2.36.2
 dependencies:
   - name: common
     version: 25.1.5
@@ -30,6 +30,6 @@ name: wallos
 sources:
   - https://github.com/ellite/Wallos
   - https://github.com/truecharts/charts/tree/master/charts/stable/wallos
-  - https://hub.docker.com/r/bellamy/wallos
+  - https://ghcr.io/ellite/wallos
 type: application
-version: 6.2.18
+version: 6.3.0
