--- a/charts/stable/wallos/values.yaml
+++ b/charts/stable/wallos/values.yaml
@@ -1,14 +1,14 @@
 image:
-  repository: docker.io/bellamy/wallos
-  tag: latest@sha256:51dfbaee9fd2e27fb899a03cddbd1272a135083fde30a216797e2fcbeee35564
+  repository: ghcr.io/ellite/wallos
+  tag: 2.36.2@sha256:49919051a4c1e97eb263ec072a53eb15768667c3f5e258b9b228fedf8acf1c5a
   pullPolicy: IfNotPresent
 
 securityContext:
   container:
     readOnlyRootFilesystem: false
-    runAsNonRoot: false
-    runAsUser: 0
-    runAsGroup: 0
+    # runAsNonRoot: false
+    # runAsUser: 0
+    # runAsGroup: 0
 
 service:
   main:
