--- a/charts/stable/wallos/values.yaml
+++ b/charts/stable/wallos/values.yaml
@@ -6,9 +6,9 @@ image:
 securityContext:
   container:
     readOnlyRootFilesystem: false
-    # runAsNonRoot: false
-    # runAsUser: 0
-    # runAsGroup: 0
+    runAsNonRoot: false
+    runAsUser: 0
+    runAsGroup: 0
 
 service:
   main:
