fix(minecraft): add external traffic policy to main service

--- a/clusters/main/kubernetes/apps/minecraft/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/minecraft/app/helm-release.yaml
@@ -42,6 +42,7 @@ spec:
        enabled: true
        loadBalancerIP: ${MINECRAFT_IP}
        type: LoadBalancer
+       externalTrafficPolicy: Local
        ports:
          main:
            enabled: true
