--- a/charts/premium/traefik/values.yaml
+++ b/charts/premium/traefik/values.yaml
@@ -191,8 +191,7 @@ service:
   tcp:
     enabled: true
     type: LoadBalancer
-    ## In most cases, you want this changed to `Local`
-    externalTrafficPolicy: Cluster
+    externalTrafficPolicy: Local
     ports:
       web:
         enabled: true
