--- a/charts/incubator/stirling-pdf/Chart.yaml
+++ b/charts/incubator/stirling-pdf/Chart.yaml
@@ -16,7 +16,7 @@ dependencies:
     tags: []
     import-values: []
 deprecated: false
-description: CHANGE ME
+description: A robust, locally hosted web-based PDF manipulation tool.
 home: https://truecharts.org/charts/incubator/stirling-pdf
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/stirling-pdf.webp
 keywords:
