chore(ich777 containers): move to ghcr

--- a/charts/stable/longvinter/values.yaml
+++ b/charts/stable/longvinter/values.yaml
@@ -1,6 +1,6 @@
 image:
   pullPolicy: IfNotPresent
-  repository: docker.io/ich777/steamcmd
+  repository: ghcr.io/ich777/steamcmd
   tag: longvinter@sha256:b11824690969ab1a29c4fdc0ad8f8a7180932ba850e2070e966e0f7d7726e1ce
 persistence:
   serverfiles:
