--- a/charts/stable/thunderbird/values.yaml
+++ b/charts/stable/thunderbird/values.yaml
@@ -1,6 +1,6 @@
 image:
   pullPolicy: IfNotPresent
-  repository: docker.io/ich777/thunderbird
+  repository: ghcr.io/ich777/thunderbird
   tag: latest@sha256:3ce501dde07e3736b8328b7ce318d7353fdfdbe75e75ad6e5e5f8203f7f44144
 persistence:
   data:
