--- a/charts/stable/chromium/values.yaml
+++ b/charts/stable/chromium/values.yaml
@@ -1,6 +1,6 @@
 image:
   pullPolicy: IfNotPresent
-  repository: docker.io/ich777/chrome
+  repository: ghcr.io/ich777/chrome
   tag: latest@sha256:bbe3f4a4d1c7e27f592a9f6e2deb7d92077cff43d4022e2a8b12032eea252e53
 persistence:
   datadir:
