--- a/charts/stable/counterstrike2d/values.yaml
+++ b/charts/stable/counterstrike2d/values.yaml
@@ -1,6 +1,6 @@
 image:
   pullPolicy: IfNotPresent
-  repository: docker.io/ich777/cs2dserver
+  repository: ghcr.io/ich777/cs2dserver
   tag: latest@sha256:eb5cb0c241b86c8b4278ddc187ee34b7c6c04ebf397182819082f1a3936f1e06
 persistence:
   serverfiles:
