--- a/charts/stable/csgo/values.yaml
+++ b/charts/stable/csgo/values.yaml
@@ -1,6 +1,6 @@
 image:
   pullPolicy: IfNotPresent
-  repository: docker.io/ich777/steamcmd
+  repository: ghcr.io/ich777/steamcmd
   tag: latest@sha256:1d3268da8cde4b9b2aebdbb99accd7eec63a3723672418797d64c34497ded1d5
 persistence:
   serverfiles:
