--- a/charts/stable/dayofdefeatsource/values.yaml
+++ b/charts/stable/dayofdefeatsource/values.yaml
@@ -1,6 +1,6 @@
 image:
   pullPolicy: IfNotPresent
-  repository: docker.io/ich777/steamcmd
+  repository: ghcr.io/ich777/steamcmd
   tag: dods@sha256:d5accb767727eb112089bb4a21c90477dbc4fd134947889b448e58561208fcc2
 persistence:
   serverfiles:
