--- a/charts/stable/dayz/values.yaml
+++ b/charts/stable/dayz/values.yaml
@@ -1,6 +1,6 @@
 image:
   pullPolicy: IfNotPresent
-  repository: docker.io/ich777/steamcmd
+  repository: ghcr.io/ich777/steamcmd
   tag: dayz@sha256:46cb5778ab2c99ffe3c7e70f3e5e232ddd2374c7ea2354fe83c97229c3a8783a
 persistence:
   serverfiles:
