--- a/charts/stable/mordhau/values.yaml
+++ b/charts/stable/mordhau/values.yaml
@@ -1,6 +1,6 @@
 image:
   pullPolicy: IfNotPresent
-  repository: docker.io/ich777/steamcmd
+  repository: ghcr.io/ich777/steamcmd
   tag: mordhau@sha256:fca001b76dfa038c8fb991e300b0e2328e380773b7efef415ad986e99eac029a
 persistence:
   serverfiles:
