--- a/charts/stable/pvk-ii/values.yaml
+++ b/charts/stable/pvk-ii/values.yaml
@@ -1,6 +1,6 @@
 image:
   pullPolicy: IfNotPresent
-  repository: docker.io/ich777/steamcmd
+  repository: ghcr.io/ich777/steamcmd
   tag: pvkii@sha256:7793376795444a883ebb8d5abeb19fd51f4fd13cdcd74deebe034d55d767c2ac
 persistence:
   serverfiles:
