--- a/charts/stable/terraria-tshock/values.yaml
+++ b/charts/stable/terraria-tshock/values.yaml
@@ -1,6 +1,6 @@
 image:
   pullPolicy: IfNotPresent
-  repository: docker.io/ich777/terrariaserver
+  repository: ghcr.io/ich777/terrariaserver
   tag: tshock@sha256:b0081242e31f2cb3185b71acd7efe46cece2870b57a9c6887282adf00d9f67dd
 persistence:
   serverfiles:
