--- a/charts/stable/heimdall/values.yaml
+++ b/charts/stable/heimdall/values.yaml
@@ -1,5 +1,5 @@
 image:
-  repository: docker.io/linuxserver/heimdall
+  repository: lscr.io/linuxserver/heimdall
   tag: 2.6.3@sha256:d3c1028ebdce756caac8085fec9fbc285a253807922652fda010394f0052133c
   pullPolicy: IfNotPresent
 service:
