--- a/charts/stable/mylar/values.yaml
+++ b/charts/stable/mylar/values.yaml
@@ -1,5 +1,5 @@
 image:
-  repository: docker.io/linuxserver/mylar3
+  repository: lscr.io/linuxserver/mylar3
   tag: version-v0.8.0@sha256:67df9336432654345f9a077c2deb90040268ff02a0f1a80f715e684789e6da55
   pullPolicy: IfNotPresent
 service:
