--- a/charts/stable/snapdrop/values.yaml
+++ b/charts/stable/snapdrop/values.yaml
@@ -1,5 +1,5 @@
 image:
-  repository: docker.io/linuxserver/snapdrop
+  repository: lscr.io/linuxserver/snapdrop
   tag: latest@sha256:10d31346e8ed8f7c5cde7bb93e418adcc8dcccab0ad61080297695f663029abb
   pullPolicy: IfNotPresent
 service:
