--- a/charts/stable/calibre-web/values.yaml
+++ b/charts/stable/calibre-web/values.yaml
@@ -1,5 +1,5 @@
 image:
-  repository: docker.io/linuxserver/calibre-web
+  repository: lscr.io/linuxserver/calibre-web
   pullPolicy: IfNotPresent
   tag: version-0.6.23@sha256:60afc6620294760d18a50de0baa288ca225ed11d2f16356cb9f1f8aa67065325
 securityContext:
