--- a/charts/stable/wallos/Chart.yaml
+++ b/charts/stable/wallos/Chart.yaml
@@ -6,7 +6,7 @@ annotations:
   truecharts.org/min_helm_version: "3.11"
   truecharts.org/train: stable
 apiVersion: v2
-appVersion: 2.36.2
+appVersion: latest
 dependencies:
   - name: common
     version: 25.1.7
@@ -32,4 +32,4 @@ sources:
   - https://github.com/truecharts/charts/tree/master/charts/stable/wallos
   - https://ghcr.io/ellite/wallos
 type: application
-version: 6.2.20
+version: 6.2.21
