--- a/charts/incubator/cannery/values.yaml
+++ b/charts/incubator/cannery/values.yaml
@@ -16,7 +16,8 @@ workload:
           env:
             PORT: "{{ .Values.service.main.ports.main.port }}"
             # HOST must be set!
-            HOST: "{{ .Values.chartContext.appUrl }}"
+            # without http/https, preferrably the ingress url
+            HOST: "cannery.example.com"
             # ecto://postgres:postgres@cannery-db/cannery
             DATABASE_URL: '{{ printf "ecto://%s:%s@%s:5432/%s" .Values.cnpg.main.user  .Values.cnpg.main.creds.password (.Values.cnpg.main.creds.host | trimAll "\"") .Values.cnpg.main.database }}'
             SECRET_KEY_BASE:
