--- a/charts/incubator/cannery/values.yaml
+++ b/charts/incubator/cannery/values.yaml
@@ -17,7 +17,7 @@ workload:
             PORT: "{{ .Values.service.main.ports.main.port }}"
             # HOST must be set!
             # without http/https, preferrably the ingress url
-            HOST: "cannery.example.com"
+            HOST: "localhost:4000"
             # ecto://postgres:postgres@cannery-db/cannery
             DATABASE_URL: '{{ printf "ecto://%s:%s@%s:5432/%s" .Values.cnpg.main.user  .Values.cnpg.main.creds.password (.Values.cnpg.main.creds.host | trimAll "\"") .Values.cnpg.main.database }}'
             SECRET_KEY_BASE:
