--- a/clusters/main/kubernetes/apps/vaultwarden/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/vaultwarden/app/helm-release.yaml
@@ -33,6 +33,13 @@ spec:
       s3:
         type: s3
         url: "${S3URL}"
+        bucket: "${S3PREFIX}-hass"
+        accessKey: "${S3ID}"
+        secretKey: "${S3KEY}"
+        encrKey: "${S3KEY}"
+      b2:
+        type: s3
+        url: "${S3URL}"
         bucket: "${S3PREFIX}-vaultwarden"
         accessKey: "${S3ID}"
         secretKey: "${S3KEY}"
@@ -98,9 +105,20 @@ spec:
           - ReadWriteMany
         storageClass: ceph-filesystem-nvme-3
         volsync:
-          - name: b2
+          - name: s3
             type: restic
             credentials: s3
+            dest:
+              volumeSnapshotClassName: csi-ceph-filesystem
+              storageClassName: ceph-filesystem-nvme-3
+              enabled: true
+            src:
+              volumeSnapshotClassName: csi-ceph-filesystem
+              storageClassName: ceph-filesystem-nvme-3
+              enabled: true
+          - name: b2
+            type: restic
+            credentials: b2
             dest:
               volumeSnapshotClassName: csi-ceph-filesystem
               storageClassName: ceph-filesystem-nvme-3
