--- a/clusters/main/kubernetes/apps/minecraft/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/minecraft/app/helm-release.yaml
@@ -33,6 +33,13 @@ spec:
       s3:
         type: s3
         url: "${S3URL}"
+        bucket: "${S3PREFIX}-hass"
+        accessKey: "${S3ID}"
+        secretKey: "${S3KEY}"
+        encrKey: "${S3KEY}"
+      b2:
+        type: s3
+        url: "${S3URL}"
         bucket: "${S3PREFIX}-minecraft"
         accessKey: "${S3ID}"
         secretKey: "${S3KEY}"
@@ -182,9 +189,18 @@ spec:
     persistence:
      data:
        volsync:
-          - name: b2
+          - name: s3
             type: restic
             credentials: s3
+            dest:
+              accessModes:
+                - ReadWriteOnce
+              enabled: false
+            src:
+              enabled: true
+          - name: b2
+            type: restic
+            credentials: b2
             dest:
               accessModes:
                 - ReadWriteOnce
