--- a/clusters/main/kubernetes/apps/vaultwarden/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/vaultwarden/app/helm-release.yaml
@@ -111,7 +111,7 @@ spec:
             dest:
               volumeSnapshotClassName: csi-ceph-filesystem
               storageClassName: ceph-filesystem-nvme-3
-              enabled: true
+              enabled: false
             src:
               volumeSnapshotClassName: csi-ceph-filesystem
               storageClassName: ceph-filesystem-nvme-3
