--- a/clusters/main/kubernetes/apps/jackett/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/jackett/app/helm-release.yaml
@@ -31,25 +31,17 @@ spec:
   values:
     credentials:
       s3:
-      s3:
         type: s3
         url: "${S3URL_TC}"
         bucket: "${S3PREFIX_TC}-jackett"
         accessKey: "${S3ID_TC}"
         secretKey: "${S3KEY_TC}"
         encrKey: "${S3KEY_TC}"
-      b2:
-        type: s3
-        url: "${S3URL_BB}"
-        bucket: "${S3PREFIX_BB}-jackett"
-        accessKey: "${S3ID_BB}"
-        secretKey: "${S3KEY_BB}"
-        encrKey: "${S3KEY_BB}"
 
     persistence:
       config:
         volsync:
-          - name: b2
+          - name: s3
             type: restic
             credentials: s3
             dest:
