--- a/clusters/main/kubernetes/apps/vaultwarden/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/vaultwarden/app/helm-release.yaml
@@ -103,29 +103,29 @@ spec:
       data:
         accessModes:
           - ReadWriteMany
-        storageClass: ceph-filesystem-nvme-3
+        storageClass: ceph-filesystem
         volsync:
           - name: s3
             type: restic
             credentials: s3
             dest:
               volumeSnapshotClassName: csi-ceph-filesystem
-              storageClassName: ceph-filesystem-nvme-3
+              storageClassName: ceph-filesystem
               enabled: false
             src:
               volumeSnapshotClassName: csi-ceph-filesystem
-              storageClassName: ceph-filesystem-nvme-3
+              storageClassName: ceph-filesystem
               enabled: true
           - name: b2
             type: restic
             credentials: b2
             dest:
               volumeSnapshotClassName: csi-ceph-filesystem
-              storageClassName: ceph-filesystem-nvme-3
+              storageClassName: ceph-filesystem
               enabled: true
             src:
               volumeSnapshotClassName: csi-ceph-filesystem
-              storageClassName: ceph-filesystem-nvme-3
+              storageClassName: ceph-filesystem
               enabled: true
 
     ingress:
