--- a/clusters/main/kubernetes/apps/minecraft/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/minecraft/app/helm-release.yaml
@@ -226,7 +226,7 @@ spec:
         targetSelector:
           dynmap: dynmap
         hosts:
-          -  host: dynmap.truecharts.org
+          -  host: dynmap.${DOMAIN_1}
         integrations:
           certManager:
             enabled: true
