--- a/clusters/main/kubernetes/apps/bitmagnet/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/bitmagnet/app/helm-release.yaml
@@ -61,9 +61,9 @@ spec:
                 namespace: traefik
           certManager:
             enabled: true
-            certificateIssuer: ks-le-prod
+            certificateIssuer: domain-1-le-prod
         hosts:
-          - host: bitmagnet.${BASE_DOMAIN}
+          - host: bitmagnet.${DOMAIN_1}
             paths:
               - path: /
                 pathType: Prefix
