--- a/charts/stable/qbittorrent/values.yaml
+++ b/charts/stable/qbittorrent/values.yaml
@@ -46,7 +46,7 @@ workload:
         main:
           env:
             QBT_WEBUI_PORT: "{{ .Values.service.main.ports.main.port }}"
-            QBT_TORRENTING_PORT: "{{ .Values.service.main.ports.main.port }}"
+            QBT_TORRENTING_PORT: "{{ .Values.service.torrent.ports.torrent.port }}"
 
             # deprecated https://github.com/onedr0p/containers/pull/1109
             # set the default port
