--- a/clustertool/embed/generic/root/DOTREPLACEdevcontainer/devcontainer.json
+++ b/clustertool/embed/generic/root/DOTREPLACEdevcontainer/devcontainer.json
@@ -1,8 +1,8 @@
 {
     "$schema": "https://raw.githubusercontent.com/devcontainers/spec/main/schemas/devContainer.schema.json",
     "name": "ClusterTool Cluster",
-    "image": "tccr.io/tccr/devcontainer:v1.0.0-RC28",
-    "initializeCommand": "docker pull tccr.io/tccr/devcontainer:v1.0.0-RC28",
+    "image": "tccr.io/tccr/devcontainer:v1.0.0",
+    "initializeCommand": "docker pull tccr.io/tccr/devcontainer:v1.0.0",
     "postCreateCommand": {
       "setup": "bash ${containerWorkspaceFolder}/.devcontainer/postCreateCommand.sh"
     },
