--- a/charts/premium/nextcloud/values.yaml
+++ b/charts/premium/nextcloud/values.yaml
@@ -538,3 +538,11 @@ ingress:
       traefik:
         chartMiddlewares:
           - nextcloud-redirect
+
+resources:
+  limits:
+    cpu: 8000m
+    memory: 16Gi
+  requests:
+    cpu: 20m
+    memory: 100Mi
