always the same

--- a/charts/stable/plextraktsync/values.yaml
+++ b/charts/stable/plextraktsync/values.yaml
@@ -55,7 +55,7 @@ workload:
             startup:
               enabled: false
           args:
-            - {{ .Values.plextraktsync.task }}
+            - "{{ .Values.plextraktsync.task }}"
 
 persistence:
   config:
