--- a/charts/stable/redmine/values.yaml
+++ b/charts/stable/redmine/values.yaml
@@ -1,7 +1,7 @@
 image:
-  repository: redmine
+  repository: docker.io/redmine/redmine
   pullPolicy: IfNotPresent
-  tag: 6.0.5@sha256:eb37f58646a901dc7727cf448cae36daaefaba79de33b5058dab79aa4c04aefb
+  tag: 6.0.5@sha256:46d53d15169a042933a429d75213b82bb7e0891e57d6e32f67975f3eec06b64e
 redmine:
   plugins_migrate: true
   no_db_migrate: false
