--- a/charts/stable/redmine/values.yaml
+++ b/charts/stable/redmine/values.yaml
@@ -1,5 +1,5 @@
 image:
-  repository: docker.io/redmine/redmine
+  repository: docker.io/redmine
   pullPolicy: IfNotPresent
   tag: 6.0.5@sha256:46d53d15169a042933a429d75213b82bb7e0891e57d6e32f67975f3eec06b64e
 redmine:
