jellyseer: switch to ghcr.io repo
Signed-off-by: James Musson <jtmusson@hey.com>

--- a/charts/stable/jellyseerr/values.yaml
+++ b/charts/stable/jellyseerr/values.yaml
@@ -1,5 +1,5 @@
 image:
-  repository: docker.io/fallenbagel/jellyseerr
+  repository: ghcr.io/fallenbagel/jellyseerr
   tag: 2.5.2@sha256:2a611369ad1d0d501c2d051fc89b6246ff081fb4a30879fdc75642cf6a37b1a6
   pullPolicy: IfNotPresent
 service:
