feat(arksurvivalevolved): BREAKING CHANGE rework chart

--- a/clusters/main/kubernetes/apps/kustomization.yaml
+++ b/clusters/main/kubernetes/apps/kustomization.yaml
@@ -3,5 +3,6 @@ kind: Kustomization
 resources:
   - renovate/ks.yaml
   - minecraft/ks.yaml
+  - ark/ks.yaml
   - jackett/ks.yaml
   - bitmagnet/ks.yaml
