--- a/charts/stable/arksurvivalevolved/Chart.yaml
+++ b/charts/stable/arksurvivalevolved/Chart.yaml
@@ -19,7 +19,7 @@ dependencies:
     tags: []
     import-values: []
 deprecated: false
-description: A custom SteamCMD chart that runs ArkSE.
+description: Runs Ark Survival Evolvedand Ark-Server-Manager
 home: https://truecharts.org/charts/stable/arksurvivalevolved
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/arksurvivalevolved.webp
 keywords:
@@ -33,8 +33,6 @@ maintainers:
     url: https://truecharts.org
 name: arksurvivalevolved
 sources:
-  - https://ghcr.io/ich777/steamcmd
-  - https://github.com/ich777/docker-steamcmd-server/tree/arkse
   - https://github.com/truecharts/charts/tree/master/charts/stable/arksurvivalevolved
 type: application
 version: 10.0.0
