--- a/charts/stable/arksurvivalevolved/values.yaml
+++ b/charts/stable/arksurvivalevolved/values.yaml
@@ -1,7 +1,7 @@
 image:
   repository: docker.io/drpsychick/arkserver
   tag: latest-v1.6.62
-#securityContext:
+# securityContext:
 #  container:
 #    runAsNonRoot: true
 #    readOnlyRootFilesystem: false
@@ -110,30 +110,31 @@ configmap:
       Game.ini: |
         [/Script/ShooterGame.ShooterGameMode]
         bDisableStructurePlacementCollision=True
-        # 0: Health,
-        # 1: Stamina,
-        # 2: Torpidity,
-        # 3: Oxygen,
-        # 4: Food,
-        # 5: Water,
-        # 6: Temperature,
-        # 7: Weight,
-        # 8: MeleeDamageMultiplier,
-        # 9: SpeedMultiplier,
-        # 10: TemperatureFortitude,
-        # 11: CraftingSpeedMultiplier
-        #PerLevelStatsMultiplier_Player[0]=2.0
-        #PerLevelStatsMultiplier_Player[4]=2.0
-        #PerLevelStatsMultiplier_Player[5]=2.0
-        #PerLevelStatsMultiplier_Player[7]=2.0
-        #PerLevelStatsMultiplier_DinoTamed[7]=2.0
-        #PerLevelStatsMultiplier_DinoWild[7]=1
-        # https://board.nitrado.net/support-de-german-only/support-gameserver/ark-survival-evolved/103586/butgeschwindigkeit-wachstumsgeschwindigkeit/?s=6270aee8447cd08b702a7315fe1e47efe64afb1b#post681499
-        # https://survivetheark.com/index.php?/forums/topic/200763-help-with-breedingimprinting-settings/
-        #MatingIntervalMultiplier=0.1
-        #BabyMatureSpeedMultiplier=25.0
-        #EggHatchSpeedMultiplier=15.0
-        #BabyCuddleIntervalMultiplier=0.1
+        ## index:
+        ## 0: Health,
+        ## 1: Stamina,
+        ## 2: Torpidity,
+        ## 3: Oxygen,
+        ## 4: Food,
+        ## 5: Water,
+        ## 6: Temperature,
+        ## 7: Weight,
+        ## 8: MeleeDamageMultiplier,
+        ## 9: SpeedMultiplier,
+        ## 10: TemperatureFortitude,
+        ## 11: CraftingSpeedMultiplier
+        # PerLevelStatsMultiplier_Player[0]=2.0
+        # PerLevelStatsMultiplier_Player[4]=2.0
+        # PerLevelStatsMultiplier_Player[5]=2.0
+        # PerLevelStatsMultiplier_Player[7]=2.0
+        # PerLevelStatsMultiplier_DinoTamed[7]=2.0
+        # PerLevelStatsMultiplier_DinoWild[7]=1
+        ## https://board.nitrado.net/support-de-german-only/support-gameserver/ark-survival-evolved/103586/butgeschwindigkeit-wachstumsgeschwindigkeit/?s=6270aee8447cd08b702a7315fe1e47efe64afb1b#post681499
+        ## https://survivetheark.com/index.php?/forums/topic/200763-help-with-breedingimprinting-settings/
+        # MatingIntervalMultiplier=0.1
+        # BabyMatureSpeedMultiplier=25.0
+        # EggHatchSpeedMultiplier=15.0
+        # BabyCuddleIntervalMultiplier=0.1
       GameUserSettings.ini: |
         [/Script/ShooterGame.ShooterGameUserSettings]
         Version=5
@@ -200,16 +201,16 @@ configmap:
         bServerGameLogEnabled=True
 
       crontab: |
-        # Example of job definition:
-        # .---------------- minute (0 - 59)
-        # |  .------------- hour (0 - 23)
-        # |  |  .---------- day of month (1 - 31)
-        # |  |  |  .------- month (1 - 12) OR jan,feb,mar,apr ...
-        # |  |  |  |  .---- day of week (0 - 6) (Sunday=0 or 7) OR sun,mon,tue,wed,thu,fri,sat
-        # |  |  |  |  |
-        # *  *  *  *  * user-name  command to be executed
+        ## Example of job definition:
+        ## .---------------- minute (0 - 59)
+        ## |  .------------- hour (0 - 23)
+        ## |  |  .---------- day of month (1 - 31)
+        ## |  |  |  .------- month (1 - 12) OR jan,feb,mar,apr ...
+        ## |  |  |  |  .---- day of week (0 - 6) (Sunday=0 or 7) OR sun,mon,tue,wed,thu,fri,sat
+        ## |  |  |  |  |
+        ## *  *  *  *  * user-name  command to be executed
 
-        # Examples for arkmanager:
+        ## Examples for arkmanager:
         # 0 * * * * arkmanager update --update-mods --warn --saveworld  # check for updates every hour
         # */15 * * * * arkmanager saveworld && arkmanager backup        # backup every 15min
         # 0 0 * * * arkmanager restart --warn --saveworld               # restart every day at midnight
